# nanoembed

./: Cargo.toml  DYNAMICS.md  IMPLEMENTATION_SUMMARY.md  README.md  config_example_dynamics.toml
src/: background.rs  config.rs  forces.rs  grid.rs  main.rs  minimization.rs  nanoparticle.rs  output.rs  periodic.rs  placement.rs  potentials.rs  quasi_random.rs  rigid_body.rs  surface_discretization.rs  types.rs  validation.rs
