[package]
name = "nanoembed"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
rand = "0.8"
rayon = "1.8"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ordered-float = "4.0"
kiddo = "4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1